# RockRenderer

./: CMakeLists.txt  README.md  frame_buffer.cpp  frame_buffer.h  rasterizer.cpp  rasterizer.h  rock_main.cpp
math/: math_utility.h  math_utility_triangle.h  vector2.h  vector3.h  vector4.h
